--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,4 +1,5 @@
 <h1>TEST COMPONENT</h1>
+<h2>Description text</h2>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque laudantium ex quisquam alias distinctio quo maiores consectetur, molestiae officia! Corporis non porro sint vero praesentium iure harum fuga reprehenderit. Quos!</p>
 <p>Optio dolorum, quisquam impedit aperiam facere alias quod vitae, ullam vero sapiente eaque maxime eos modi aut iure. Officiis architecto molestias odio minima porro quisquam repudiandae soluta voluptatum alias obcaecati!</p>
